<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Aboutus"
            android:fontFamily="@font/albert"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/by"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/developedby" />

        <LinearLayout
            android:id="@+id/usLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bawar"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bawaryxom" />

            <TextView
                android:id="@+id/hama"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hamaybakr" />

            <TextView
                android:id="@+id/brwa"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xalabrwa" />

            <TextView
                android:id="@+id/hamayrashid"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hamayrashid" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            style="@style/by"
            android:layout_marginTop="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/supervisedby" />

        <LinearLayout
            android:id="@+id/themLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silvakam" />

            <TextView
                android:id="@+id/textView7"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muayad" />

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>