<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:supportsRtl="true"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="88dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/htg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/halabja_btn"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn"
        android:text="@string/b1"
        android:textAlignment="center"
        android:onClick="onHalabjaClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/places_btn"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="onPlace"
        android:background="@drawable/btn"
        android:text="@string/b2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/halabja_btn" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="onAboutClick"
        android:background="@drawable/btn"
        android:text="@string/b3"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/places_btn" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="onExit"
        android:background="@drawable/btn"
        android:text="@string/b4"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_btn" />

    <ImageButton
        android:id="@+id/ku_btn"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="11dp"
        android:src="@drawable/ku"
        app:layout_constraintBottom_toTopOf="@+id/en_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/en_btn"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="78dp"
        android:src="@drawable/en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>


